source/stylesheets/site.css.scss
$dark-blue: #110f33;
$dark-grey: #2e2e30;
$light-grey: #47474a;
//$light-grey: #69696e;
$watermelon: #e00288;
$bootstrap-blue: #007bff;

body {
  font-family: 'Lato', sans-serif;
  position: relative;
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'Work Sans', sans-serif;
}

.quote,
.copy-source {
  font-style: italic;
  font-weight: bold;
}

.section {
  margin: 3em 0em;
}

#type-text {
  font-style: italic;
  font-weight: normal;
}

#name {
  font-size: 5rem;
  color: #007bff;
  font-family: 'Bangers';
}

.circle-image {
  height: auto;
  width: 50%;
  border-radius: 50%;
  margin: 20px;
  -webkit-box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 1);
  -moz-box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 1);
  box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 1);
}

.intro-text,
.contact-text,
.about-me-text {
  font-weight: normal;
}

.contact-text {
  margin-top: 1.5em;
}

.social-media-icon-links {
  a {
    color: inherit;
  }
  a:hover {
    text-decoration: none;
  }
  i {
    margin: 0.5em;
  }
}

.social-media-icon-links:hover a {
  opacity: 0.3;
}

.social-media-icon-links:hover a:hover {
  color: $watermelon;
  opacity: 1;
}

.about-me-quote,
.testimonial-quote {
  font-style: italic;
  i {
    color: #B3B3B2FF;
  }
}

.about-me-quote {
  margin-top: 1.0em;
}

#justice-video iframe {
  width: 100%;
}

.testimonial-quote {
  margin-top: 2.0em;
}

.question {
  font-weight: bold;
}

.table th {
  border-top: none !important;
}

.graph {
  width: 60%;
  height: auto;
}

.role {
  font-weight: 200;
}

.company {
  font-weight: bold;
}

#experience-links {
  a:hover {
    text-decoration: none;
  }
}

#resume-contact-btn {
  margin-top: 2em;
}

p, table {
  font-weight: 200;
}

ul, li {
  font-weight: 200;
}

/* ------------------------------------------------------------------------- */
/*|                               SIDEBAR                                   |*/
/* ------------------------------------------------------------------------- */
.wrapper {
  display: flex;
  width: 100%;
}

#sidebarCollapse {
  width: 40px;
  height: 40px;
  border-style: solid;
  border-width: 1px;
  border-radius: 4px;
  align-items: flex-start;
  position: -webkit-sticky;
  position: sticky;
  top: 20px;
  z-index: 999;
}

#sidebarCollapse span {
  width: 80%;
  height: 2px;
  margin: 0 auto;
  display: block;
  background: #000000;
  border-radius: 4px;
  transition: all 0.8s cubic-bezier(0.810, -0.330, 0.345, 1.375);
}

#sidebarCollapse span:first-of-type {
  /* rotate first one */
  transform: rotate(45deg) translate(2px, 2px);
}

#sidebarCollapse span:nth-of-type(2) {
  /* second one is not visible */
  opacity: 0;
}

#sidebarCollapse span:last-of-type {
  /* rotate third one */
  transform: rotate(-45deg) translate(1px, -1px);
}

#sidebarCollapse.active span {
  /* no rotation */
  transform: none;
  /* all bars are visible */
  opacity: 1;
  margin: 5px auto;
}

#sidebar {
  width: 250px;
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  z-index: 999;
  background: $dark-grey;
  color: #ffffff;
  transition: all 0.3s;

  a {
    color: #ffffff;
    text-decoration: none;
    font-weight: bold;
  }

  .social-media-icons {
    i {
      font-size: 2rem;
    }

    /* Base styles for the tooltip's content area */
    .tooltip:after,
    [data-tooltip]:after {
      background-color: #ffffff;
      color: $dark-grey;
    }
  }
}

#sidebar.active {
  margin-left: -250px;
}

#sidebar .sidebar-header {
  padding: 20px;
  background: $dark-grey;
}

#sidebar ul.components {
  padding: 20px 0;
  border-bottom: 1px solid $dark-grey;
}

#sidebar ul p {
  color: #ffffff;
  padding: 10px;
}

#sidebar ul li a {
  padding: 10px;
  font-size: 1.1em;
  display: block;
}

#sidebar ul li a:hover {
  color: #ffffff;
  background: $watermelon;
}

#sidebar ul li.active>a,
a[aria-expanded="true"] {
  color: #ffffff;
  background: $bootstrap-blue;
}

a[data-toggle="collapse"] {
  position: relative;
}

.dropdown-toggle::after {
  display: block;
  position: absolute;
  top: 50%;
  right: 20px;
  transform: translateY(-50%);
}

ul ul a {
  font-size: 0.9em !important;
  padding-left: 30px !important;
  background: $light-grey;
}

ul.CTAs {
  padding: 20px;
}

ul.CTAs a {
  text-align: center;
  font-size: 0.9em !important;
  display: block;
  border-radius: 5px;
  margin-bottom: 5px;
}

a.contact {
  background: $bootstrap-blue;
  color: #ffffff;
}

a.work-with-me,
a.work-with-me:hover {
  background: $bootstrap-blue;
  color: #ffffff;
}

/* CONTENT STYLE */
#content {
  width: calc(100% - 250px);
  padding: 40px;
  min-height: 100vh;
  transition: all 0.3s;
  position: absolute;
  top: 0;
  right: 0;
}

#content.active {
  width: 100%;
}

/* MEDIAQUERIES */
@media (max-width: 768px) {
  #sidebar.active {
    margin-left: -250px;
  }

  #sidebar {
    margin-left: 0;
  }

  #content.active {
    width: 100%;
  }

  #content {
    width: calc(100% - 250px);
  }

  #sidebarCollapse span {
    //display: none;
  }

  /* Reversing the behavior of the bars:
     Removing the rotation from the first,
     last bars and reappear the second bar on default state,
     and giving them a vertical margin */
  #sidebarCollapse.active span:first-of-type,
  #sidebarCollapse.active span:nth-of-type(2),
  #sidebarCollapse.active span:last-of-type {
    transform: none;
    opacity: 1;
    margin: 5px auto;
  }

  /* Removing the vertical margin and make the first and last bars rotate again
  \  when the sidebar is open, hiding the second bar */
  #sidebarCollapse span {
    margin: 0 auto;
  }

  #sidebarCollapse span:first-of-type {
    transform: rotate(45deg) translate(2px, 2px);
  }

  #sidebarCollapse span:nth-of-type(2) {
    opacity: 0;
  }

  #sidebarCollapse span:last-of-type {
    transform: rotate(-45deg) translate(1px, -1px);
  }

  .graph {
    width: 100%;
    height: auto;
  }

}
/* ... */

